Fixes sorting on reports list
- This moves the footer out of the container-fluid to avoid sorting on it

--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -290,3 +290,7 @@ footer {
     -ms-flex: 1 0 10%;
     flex: 1 0 10%;
 }
+
+.list-view-pf-view {
+    background: #fff;
+}
